hphp/test/slow/sealed/sealed_classes5.php.expectf
Fatal error: Values in sealed whitelist must be classname constants. in %s/test/slow/sealed/sealed_classes5.php on line 3
